--- a/comics/213/index.html
+++ b/comics/213/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS #212: azimuth</title>
+    <title>comiCSS #213: October 1st</title>
 
-    <meta property="og:title" content="comiCSS #212: azimuth" />
+    <meta property="og:title" content="comiCSS #213: October 1st" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art/comics/212" />
-    <meta property="og:image" content="https://comicss.art/comics/212/thumb.png" />
-    <meta property="og:description" content="comic with 4 panels showing a man and a woman talking. He asks 'Hey, Jill! Do you remember the name of the CSS property used to set the direction of sound sources in audio playback?' She replies 'Azimuth', and he quickly answers 'Bless you!' There's an awkward silence, and to her despair, he says 'But, really, do you remember the name of the CSS property used to set the direction of sound sources in audio playback?'" />
+    <meta property="og:url" content="https://comicss.art/comics/213" />
+    <meta property="og:image" content="https://comicss.art/comics/213/thumb.png" />
+    <meta property="og:description" content="cartoon with two panels. The first one is titled September 30 and shows the CSS logo with kawaii eyes and a big smile over a colorful background. The second one is titled October 1 and shows the CSS logo in dark colors with eerie eyes, fangs, and horns over a gray background" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://comicss.art/comics/212">
-    <meta name="twitter:title" content="comiCSS #212: azimuth">
-    <meta name="twitter:description" content="comic with 4 panels showing a man and a woman talking. He asks 'Hey, Jill! Do you remember the name of the CSS property used to set the direction of sound sources in audio playback?' She replies 'Azimuth', and he quickly answers 'Bless you!' There's an awkward silence, and to her despair, he says 'But, really, do you remember the name of the CSS property used to set the direction of sound sources in audio playback?'">
-    <meta name="twitter:image" content="https://comicss.art/comics/212/thumb.png">
+    <meta name="twitter:url" content="https://comicss.art/comics/213">
+    <meta name="twitter:title" content="comiCSS #213: October 1st">
+    <meta name="twitter:description" content="cartoon with two panels. The first one is titled September 30 and shows the CSS logo with kawaii eyes and a big smile over a colorful background. The second one is titled October 1 and shows the CSS logo in dark colors with eerie eyes, fangs, and horns over a gray background">
+    <meta name="twitter:image" content="https://comicss.art/comics/213/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel="canonical" href="https://comicss.art/comics/212" />
+    <link rel="canonical" href="https://comicss.art/comics/213" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -96,13 +96,13 @@
         </ul>
       </nav>
     </header>
-    <main id="main">
+    <main id="main" class="latest">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>azimuth</h1>
+      <h1>October 1st</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,13 +111,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/211" rel="prev">
+        <a href="/comics/212" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/201">
+        <a class="random-post" href="/comics/206">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/213" rel="next">
+        <a href="/comics/214" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,11 +139,9 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" class="" aria-label="comic with 4 panels showing a man and a woman talking. He asks 'Hey, Jill! Do you remember the name of the CSS property used to set the direction of sound sources in audio playback?' She replies 'Azimuth', and he quickly answers 'Bless you!' There's an awkward silence, and to her despair, he says 'But, really, do you remember the name of the CSS property used to set the direction of sound sources in audio playback?'">
-        <img src="/comics/212/212-azimuth-0.webp" alt="" width="350" />
-        <img src="/comics/212/212-azimuth-1.webp" alt="" width="350" />
-        <img src="/comics/212/212-azimuth-2.webp" alt="" width="350" />
-        <img src="/comics/212/212-azimuth-3.webp" alt="" width="350" />
+      <div id="comic-strip" role="img" class="" aria-label="cartoon with two panels. The first one is titled September 30 and shows the CSS logo with kawaii eyes and a big smile over a colorful background. The second one is titled October 1 and shows the CSS logo in dark colors with eerie eyes, fangs, and horns over a gray background">
+        <img src="/comics/213/213-october-0.webp" alt="" width="350" />
+        <img src="/comics/213/213-october-1.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -153,13 +151,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/211" rel="prev">
+        <a href="/comics/212" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/182">
+        <a class="random-post" href="/comics/155">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -167,7 +165,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/213" rel="next">
+        <a href="/comics/214" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -181,9 +179,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/212">https://comicss.art/comics/212</a></p>
-      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/212/azimuth.png">https://comicss.art/comics/212/azimuth.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/212/azimuth.html" rel="alternate">https://comicss.art/comics/212/azimuth.html</a></p>
+      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/213">https://comicss.art/comics/213</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/213/october.png">https://comicss.art/comics/213/october.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/213/october.html" rel="alternate">https://comicss.art/comics/213/october.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -221,7 +219,7 @@
       </nav>
     </footer>
 
-    <script>let postId = 212;</script>
+    <script>let postId = 213;</script>
     <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
