--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>azimuth</h1>
+      <h1>October 1st</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -112,13 +112,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/211" rel="prev">
+        <a href="/comics/212" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/201">
+        <a class="random-post" href="/comics/206">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -140,11 +140,9 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="comic with 4 panels showing a man and a woman talking. He asks 'Hey, Jill! Do you remember the name of the CSS property used to set the direction of sound sources in audio playback?' She replies 'Azimuth', and he quickly answers 'Bless you!' There's an awkward silence, and to her despair, he says 'But, really, do you remember the name of the CSS property used to set the direction of sound sources in audio playback?'">
-        <img src="/comics/212/212-azimuth-0.webp" alt="" width="350" />
-        <img src="/comics/212/212-azimuth-1.webp" alt="" width="350" />
-        <img src="/comics/212/212-azimuth-2.webp" alt="" width="350" />
-        <img src="/comics/212/212-azimuth-3.webp" alt="" width="350" />
+      <div id="comic-strip" class="" role="img" aria-label="cartoon with two panels. The first one is titled September 30 and shows the CSS logo with kawaii eyes and a big smile over a colorful background. The second one is titled October 1 and shows the CSS logo in dark colors with eerie eyes, fangs, and horns over a gray background">
+        <img src="/comics/213/213-october-0.webp" alt="" width="350" />
+        <img src="/comics/213/213-october-1.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -154,13 +152,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/211" rel="prev">
+        <a href="/comics/212" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/182">
+        <a class="random-post" href="/comics/155">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -182,9 +180,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/212">https://comicss.art/comics/212</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/212/azimuth.png">https://comicss.art/comics/212/azimuth.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/212/azimuth.html" rel="alternate">https://comicss.art/comics/212/azimuth.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/213">https://comicss.art/comics/213</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/213/october.png">https://comicss.art/comics/213/october.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/213/october.html" rel="alternate">https://comicss.art/comics/213/october.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -223,7 +221,7 @@
     </footer>
 
     <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2025-09-28"></script>
+    <script src="/js/data.js?last-updated=2025-10-02"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
