--- a/comics/215/index.html
+++ b/comics/215/index.html
@@ -9,24 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS</title>
+    <title>comiCSS #215: One Last PR</title>
 
-    <meta property="og:title" content="comiCSS" />
+    <meta property="og:title" content="comiCSS #215: One Last PR" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art" />
-    <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
-    <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
+    <meta property="og:url" content="https://comicss.art/comics/215" />
+    <meta property="og:image" content="https://comicss.art/comics/215/thumb.png" />
+    <meta property="og:description" content="comic strip with two panels showing a man in front of a computer 'I still have time for one more PR. Steve said he just updated some classes.' The next panels shows an old man in front of the same computer 'It has been 30 years... still one class to go... damn you Steve... Damn you Tailwin!'" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="http://comicss.art/">
-    <meta name="twitter:title" content="comiCSS">
-    <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
-    <meta name="twitter:image" content="https://comicss.art/images/thumb.jpg">
+    <meta name="twitter:url" content="https://comicss.art/comics/215">
+    <meta name="twitter:title" content="comiCSS #215: One Last PR">
+    <meta name="twitter:description" content="comic strip with two panels showing a man in front of a computer 'I still have time for one more PR. Steve said he just updated some classes.' The next panels shows an old man in front of the same computer 'It has been 30 years... still one class to go... damn you Steve... Damn you Tailwin!'">
+    <meta name="twitter:image" content="https://comicss.art/comics/215/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
-    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
 
-    <link rel="canonical" href="https://comicss.art" />
+    <link rel="canonical" href="https://comicss.art/comics/215" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -126,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/216" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -140,7 +139,7 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="comic strip with two panels showing a man in front of a computer 'I still have time for one more PR. Steve said he just updated some classes.' The next panels shows an old man in front of the same computer 'It has been 30 years... still one class to go... damn you Steve... Damn you Tailwin!'">
+      <div id="comic-strip" role="img" class="" aria-label="comic strip with two panels showing a man in front of a computer 'I still have time for one more PR. Steve said he just updated some classes.' The next panels shows an old man in front of the same computer 'It has been 30 years... still one class to go... damn you Steve... Damn you Tailwin!'">
         <img src="/comics/215/215-one-last-pr-0.webp" alt="" width="350" />
         <img src="/comics/215/215-one-last-pr-1.webp" alt="" width="350" />
       </div>
@@ -166,7 +165,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/216" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -180,8 +179,8 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/215">https://comicss.art/comics/215</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/215/one-last-pr.png">https://comicss.art/comics/215/one-last-pr.png</a></p>
+      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/215">https://comicss.art/comics/215</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/215/one-last-pr.png">https://comicss.art/comics/215/one-last-pr.png</a></p>
       <p>Source code: <a aria-label="html version" id="code-link" href="/comics/215/one-last-pr.html" rel="alternate">https://comicss.art/comics/215/one-last-pr.html</a></p>
 
       <hr />
@@ -220,8 +219,8 @@
       </nav>
     </footer>
 
-    <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2025-10-05"></script>
+    <script>let postId = 215;</script>
+    <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
