--- a/comics/216/index.html
+++ b/comics/216/index.html
@@ -9,24 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS</title>
+    <title>comiCSS #216: Midlife Crisis</title>
 
-    <meta property="og:title" content="comiCSS" />
+    <meta property="og:title" content="comiCSS #216: Midlife Crisis" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art" />
-    <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
-    <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
+    <meta property="og:url" content="https://comicss.art/comics/216" />
+    <meta property="og:image" content="https://comicss.art/comics/216/thumb.png" />
+    <meta property="og:description" content="comic with 4 panels in a 2x2 grid titled Midlife Crisis. Two characters speak: - We have a problem with Steve! - What is it? - He is going through a midlife crisis... - Oh no! Did he buy a motorbike? - No. worse! - A speedboat? - Way worse! - Oh, no! Please tell me it's not... - Sadly, yes! - Really? Again??. The last panel shows a character (Steve) typing in a computer while someone off-panel says: He is building a new JS framework?!" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="http://comicss.art/">
-    <meta name="twitter:title" content="comiCSS">
-    <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
-    <meta name="twitter:image" content="https://comicss.art/images/thumb.jpg">
+    <meta name="twitter:url" content="https://comicss.art/comics/216">
+    <meta name="twitter:title" content="comiCSS #216: Midlife Crisis">
+    <meta name="twitter:description" content="comic with 4 panels in a 2x2 grid titled Midlife Crisis. Two characters speak: - We have a problem with Steve! - What is it? - He is going through a midlife crisis... - Oh no! Did he buy a motorbike? - No. worse! - A speedboat? - Way worse! - Oh, no! Please tell me it's not... - Sadly, yes! - Really? Again??. The last panel shows a character (Steve) typing in a computer while someone off-panel says: He is building a new JS framework?!">
+    <meta name="twitter:image" content="https://comicss.art/comics/216/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
-    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
 
-    <link rel="canonical" href="https://comicss.art" />
+    <link rel="canonical" href="https://comicss.art/comics/216" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -126,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/217" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -140,7 +139,7 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="comic with 4 panels in a 2x2 grid titled Midlife Crisis. Two characters speak: - We have a problem with Steve! - What is it? - He is going through a midlife crisis... - Oh no! Did he buy a motorbike? - No. worse! - A speedboat? - Way worse! - Oh, no! Please tell me it's not... - Sadly, yes! - Really? Again??. The last panel shows a character (Steve) typing in a computer while someone off-panel says: He is building a new JS framework?!">
+      <div id="comic-strip" role="img" class="" aria-label="comic with 4 panels in a 2x2 grid titled Midlife Crisis. Two characters speak: - We have a problem with Steve! - What is it? - He is going through a midlife crisis... - Oh no! Did he buy a motorbike? - No. worse! - A speedboat? - Way worse! - Oh, no! Please tell me it's not... - Sadly, yes! - Really? Again??. The last panel shows a character (Steve) typing in a computer while someone off-panel says: He is building a new JS framework?!">
         <img src="/comics/216/216-midlife-crisis-0.webp" alt="" width="350" />
         <img src="/comics/216/216-midlife-crisis-1.webp" alt="" width="350" />
         <img src="/comics/216/216-midlife-crisis-2.webp" alt="" width="350" />
@@ -168,7 +167,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/217" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -182,8 +181,8 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/216">https://comicss.art/comics/216</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/216/midlife-crisis.png">https://comicss.art/comics/216/midlife-crisis.png</a></p>
+      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/216">https://comicss.art/comics/216</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/216/midlife-crisis.png">https://comicss.art/comics/216/midlife-crisis.png</a></p>
       <p>Source code: <a aria-label="html version" id="code-link" href="/comics/216/midlife-crisis.html" rel="alternate">https://comicss.art/comics/216/midlife-crisis.html</a></p>
 
       <hr />
@@ -222,8 +221,8 @@
       </nav>
     </footer>
 
-    <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2025-10-13"></script>
+    <script>let postId = 216;</script>
+    <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
